--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -214,7 +214,7 @@
   .missingIngredients{
     width: 100%;
     float: left;
-    height: 100px;
+    min-height: 100px;
     border: 1px solid rgb(250, 249, 183);
     background-color: #c4c4c4;
     box-sizing: border-box;
