--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -202,8 +202,31 @@
     text-align: center;
   }
 
+  .form{
+    float: left;
+    background: rgb(154, 241, 132);
+  }
+
+  .form > label, input {
+    margin: 10px;
+    border: 1px solid salmon;
+  }
+
+  .bitter{
+    color: rgb(155, 61, 18)
+  }
+
+  .sweet{
+    color: rgb(181, 240, 18)
+  }
+
   .firstBox{
     width: 150px;
+  }
+
+  .firstBoxAnalysis{
+    width: 100%;
+    border: 1px solid rgb(236, 236, 174);
   }
 
   .secondBox{
